Added icons, header, and sidebar

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,10 @@
 @import "base";
 @import "layout";
 @import "components";
+
+
+
+// overall container
+// header
+    // logo, search, icons, profile
+//sidebar w links
