--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -10,7 +10,7 @@
     font-size: 1.4rem;
     height: 7rem;
     background-color: #FFF;
-    border-bottom:  var(--color-grey-light-1);
+    border-bottom:  1px solid var(--color-grey-light-2);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -29,7 +29,29 @@
 }
 
 .hotel-view {
-    background-color: orangered;
+    background-color: #FFF;
     flex: 1;
-    height: 80rem;
+}
+
+.detail {
+    display: flex;
+    padding: 4.5rem;
+    background-color: var(--color-grey-light-1);
+    border-bottom: var(--line);
+    font-size: 1.4rem;
+}
+
+.description {
+    background-color: #FFF;
+    box-shadow: var(--shadow-light);
+    padding: 3rem;
+    flex: 0 0 60%;
+    margin-right: 4.5rem;   
+}
+
+.user-reviews {
+    flex: 1;  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
