--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -1,3 +1,9 @@
+$bp-largest: 75em;
+$bp-large: 68.75em;
+$bp-medium: 68.75em;
+$bp-small: 37.5em;
+$bp-smallest: 31.25em;
+
 :root {
     --color-primary: #eb2f64;
     --color-primary-light: #FF3366;
@@ -32,6 +38,18 @@
 html {
     box-sizing: border-box;
     font-size: 62.5%; // 1rem = 10px, 10px/16px = 62.5%
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
+
+    @media only screen and (max-width: $bp-large) {
+        font-size: 50%;
+    }
+
+    @media only screen and (max-width: $bp-smallest) {
+        font-size: 43.75%;
+    }
 }
 
 body {
